# space-sim

./: .clang-format  CMakeLists.txt  README.md  body.cc  body.h  glad.c  main.cpp  render2d.cc  render2d.h  shader.cc  shader.h  surface.cc  surface.h  system.cc  system.h  vector.cc  vector.h
include/glad/: glad.h
shaders/: fragment_shader.frag  fragment_shader_2d.frag  vertex_shader.vert
